fix content alignment for review slider on education overview page

--- a/education/education.less
+++ b/education/education.less
@@ -16,6 +16,9 @@
 #reviews {
     padding: 20px 0;
     
+    .slick-slide {
+        .flex-direction(column);
+    }
     .slick-dots {
         margin-top: 20px;
     }
